Version 3.10 - ?

	geant:

	* Extended the attributes 'if' and 'unless' to accept the values
	  "true" and "false". This can be useful when automatically generating
	  geant build files. See bug#2657770.

	gec:

	* Added option --gelint to force the whole content of classes to be
	  checked (even features not reachable from the root creation procedure).
	* Fixed bug in the generated C code for call agents whose feature was
	  FUNCTION.item or ROUTINE.call and whose closed argument was a manifest
	  tuple. See bug#2997112.
	* Fixed implementation of class IDENTIFIED_ROUTINES. Object addresses
	  were casted to INTEGER_32, which causes loss of information when
	  compiled on a 64-bit computer. See bug#2999209.
	* Fixed type system bug when processing constant attributes in
	  inspect instructions. See bug#3238111.
	* Fixed bug when an inspect instruction had no else-branch. No exception
	  was raised.
  * Use ISE Eiffel's ec instead of ecb, so output is compatible with
	  estudio; else estudio will complain about a corrupted project.
	* Fixed bug when running 'gec --gelint ...'. Validity errors were
	  reported twice.

	gelint:

	* Fixed bug where it was reporting an internal error instead of a VTCT error
	  when the type of a local variable was a generic class type whose base class
	  did not exist.
	* Report a VIPR-3 error for inline agent of the once and external forms.
	  This is not in ECMA 367-2, but a restriction in ISE.

	getest:

	* Set exit code to 4 when at least one of the test cases has been aborted.
	* Split the feature `build_suite' in smaller routines in the generated test
	  harness so that the back-end C compiler (in particular MSVC under Windows)
	  can compile the generated C code for this routine in a reasonable amount
	  of time.

	gexace:

	* Added option "syntax" to support the corresponding option in ECF.
	* Added documentation explaining how to add a new option in Xace.

	geyacc:
