@@ -22,10 +22,20 @@ create
 	make
 %}
 
+UTF8_BOM (\0xEF\0xBB\0xBF)
+
 %x MS MSN MSN1 VS1 VS2 VS3 LAVS1 LAVS2 LAVS3
 %option nodefault line outfile="et_eiffel_preparser.e"
 
 %%
+
+----------/** BOM **/-----------------------------------------------------------
+
+{UTF8_BOM}	{
+				-- Ignore byte order mark (BOM).
+				-- See http://en.wikipedia.org/wiki/Byte_order_mark
+			}
+
 
 ----------/** Separators, Comments, Symbols **/----------------------------------------------------
 
